[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "waluigi"
version = "1.1.1"
description = "A scan automation pipeline tool written in Python"
authors = ["Ryan Wincey (b0yd)"]
repository = "https://github.com/securifera/reverge_collector"
homepage = "https://www.reverge.io/"
license = "MIT"
keywords = ["python", "bug-bounty", "bugbounty", "scanner", "hacking", "pentesting", "recon", "osint", "redteam"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
luigi = "3.6.0"
pycryptodomex = "3.23.0"
netifaces = "0.11.0"
pyyaml = "6.0.3"
python-libnmap = "0.7.3"
shodan = "1.31.0"
pytest = "8.4.2"
netaddr = "1.3.0"
validators = "0.35.0"
