[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reverge_collector"
version = "1.2.0"
description = "A scan automation pipeline tool written in Python"
authors = ["Ryan Wincey (b0yd)"]
repository = "https://github.com/securifera/reverge_collector"
homepage = "https://www.reverge.io/"
license = "MIT"
keywords = ["python", "bug-bounty", "bugbounty", "scanner", "hacking", "pentesting", "recon", "osint", "redteam"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pycryptodomex = "3.23.0"
netifaces = "0.11.0"
pyyaml = "6.0.3"
python-libnmap = "0.7.3"
shodan = "1.31.0"
pytest = "8.4.2"
netaddr = "1.3.0"
validators = "0.35.0"

# Dev tooling (lint/format/coverage). Install with `pip install ruff pytest-cov
# pytest-mock` into the same venv used to run tests, or via:
#   poetry install --with dev   (if using a Poetry version that supports groups)
[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
pytest-cov = ">=5.0"
pytest-mock = ">=3.14"

# -- Ruff ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["reverge_collector"]
extend-exclude = [
    "venv",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E712",   # `== True` / `== False` — pervasive across scanner glue code
    "E711",   # `== None` — same as above
    "E721",   # type comparison with `==` — same
    "E722",   # bare except — common in scanner subprocess wrappers
    "B904",   # raise ... from err — adopt as we touch each except block
    "B007",   # unused loop variable — many scan parsers iterate by index/key
    "F841",   # unused local — common in defensive parsing blocks
    "UP015",  # unnecessary open mode 'r' — cosmetic, huge diff
    "UP031",  # printf-style string formatting
    "UP006",  # non-pep585 annotation (List -> list)
    "UP045",  # non-pep604 annotation (Optional[X] -> X | None)
    "UP035",  # deprecated-import
    "SIM102", # nested if — pervasive in parse functions; flatten case-by-case
    "SIM105", # try/except/pass — many scanner cleanup paths; revisit per-call
    "SIM108", # if/else → ternary — readability tradeoff in scan parsers
    "SIM117", # nested with statements — common in subprocess + file handling
    "SIM118", # key in dict.keys() — pervasive; not worth a bulk rewrite
    "C401",   # generator literal — minor
    "C405",   # `set([...])` → `{...}` — minor, plenty of these in importers
    "C414",   # unnecessary list() — minor
    "W291",   # trailing whitespace inside string/docstring literals — auto-fix misses these
    "W293",   # whitespace on blank lines inside literals
    "B012",   # break/return inside finally — rare and intentional in cleanup blocks
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM", "F811", "F401"]
# pyshot_scan.py references `_import_already_done` and `_import_results` that
# are not defined in the module — pre-existing dead-code path (the function
# is never called from production flows). Documented here rather than blocked.
"reverge_collector/pyshot_scan.py" = ["F821"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# -- Pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

# -- Coverage -----------------------------------------------------------------

[tool.coverage.run]
source = ["reverge_collector"]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
